--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -9,7 +9,7 @@ TwoPlayerSplitscreenLayout=Horizontal
 ThreePlayerSplitscreenLayout=FavorTop
 FourPlayerSplitscreenLayout=Grid
 bOffsetPlayerGamepadIds=False
-GameInstanceClass=/Script/Engine.GameInstance
+GameInstanceClass=/Game/Tree/BPGI_Oxygen.BPGI_Oxygen_C
 GameDefaultMap=/Game/Map/Game.Game
 ServerDefaultMap=/Engine/Maps/Entry.Entry
 GlobalDefaultGameMode=/Game/GM_TapTap.GM_TapTap_C
