--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -227,3 +227,8 @@ ConnectionType=USBOnly
 bUseManualIPAddress=False
 ManualIPAddress=
 
+[/Script/AndroidRuntimeSettings.AndroidRuntimeSettings]
+MinSDKVersion=30
+TargetSDKVersion=30
+bPackageDataInsideApk=True
+
