--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -231,4 +231,6 @@ ManualIPAddress=
 MinSDKVersion=30
 TargetSDKVersion=30
 bPackageDataInsideApk=True
+Orientation=Portrait
+ApplicationDisplayName=3
 
